feat: add sandbox logs
